RESOLVED FIXED24861
Chromium port does not render decorations for <input type="search">
https://bugs.webkit.org/show_bug.cgi?id=24861
Summary Chromium port does not render decorations for <input type="search">
Peter Kasting
Reported 2009-03-26 16:36:15 PDT
Patch coming shortly
Attachments
patch v1 (22.23 KB, patch)
2009-03-26 16:37 PDT, Peter Kasting
no flags
patch v2 (22.45 KB, patch)
2009-03-26 16:55 PDT, Peter Kasting
eric: review+
Peter Kasting
Comment 1 2009-03-26 16:37:14 PDT
Created attachment 28993 [details] patch v1
Peter Kasting
Comment 2 2009-03-26 16:55:06 PDT
Created attachment 28994 [details] patch v2 Now compiles on Linux, hopefully
Eric Seidel (no email)
Comment 3 2009-03-26 17:23:47 PDT
Comment on attachment 28994 [details] patch v2 Peter informs me this is just copy/paste code. That seems like a really bad idea. Especially for this volume of code. Can't we use a RenderThemeChromium superclass here?
Eric Seidel (no email)
Comment 4 2009-03-26 17:53:27 PDT
Comment on attachment 28994 [details] patch v2 Peter says he's about to refactor this as his next patch. So this is a fine intermediate step.
Peter Kasting
Comment 5 2009-03-27 11:08:04 PDT
Fixed in r42044.
Note You need to log in before you can comment on or make changes to this bug.